# ctyun-skills

./: .env.example  .gitignore  .markdownlint.jsonc  AGENTS.md  README.md  README_CN.md  README_EN.md  findings.md  pyproject.toml  task_plan.md
ctyun-alert-intelligence/: SKILL.md
ctyun-alert-intelligence/references/: api-sdk-usage.md  cli-usage.md  core-concepts.md  integration.md  monitoring.md  prompt-templates.md  rubric.md  troubleshooting.md
ctyun-audit-ops/: SKILL.md
ctyun-audit-ops/references/: cli-usage.md  troubleshooting.md
ctyun-bastion-ops/: SKILL.md
ctyun-bastion-ops/references/: api-sdk-usage.md  cli-usage.md  core-concepts.md  integration.md  monitoring.md  prompt-templates.md  rubric.md  troubleshooting.md
ctyun-cce-ops/: SKILL.md
ctyun-cdn-ops/: SKILL.md
ctyun-cloudaudit-ops/: SKILL.md
ctyun-cloudmonitor-ops/: SKILL.md
ctyun-dns-ops/: SKILL.md
ctyun-ecs-ops/: SKILL.md
ctyun-eip-ops/: SKILL.md
ctyun-elb-ops/: SKILL.md
ctyun-iam-ops/: SKILL.md
ctyun-kms-ops/: SKILL.md
ctyun-mongodb-ops/: SKILL.md
ctyun-mysql-ops/: SKILL.md
ctyun-oos-ops/: SKILL.md
ctyun-postgresql-ops/: SKILL.md
ctyun-rds-ops/: SKILL.md
ctyun-redis-ops/: SKILL.md
ctyun-skill-generator/: SKILL.md
ctyun-ssl-cert-ops/: SKILL.md
ctyun-tag-audit-ops/: SKILL.md
ctyun-vpc-ops/: SKILL.md
ctyun-waf-ops/: SKILL.md
docs/: GCL_RETROSPECTIVE.md  git-worktree-workflow.md
scripts/: check_doc_integrity.py  check_gcl_artifacts.py  check_skill_size.py  gcl_dashboard.py  gcl_monitor_alarms.py  gcl_runner.py  preflight-check.py
(+166 files in other folders)
