[project]
name = "ctyun-skills"
version = "1.0.0"
description = "AI Agent Skills for CTyun (天翼云) operations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CTyun Skills Team"},
]
requires-python = ">=3.10"
dependencies = [
    "ctyun-cli>=1.0.0",
    "ctyun-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.uv]
index-url = "https://pypi.org/simple/"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
